--- a/todolist-debut-ex2/src/main/resources/application.properties
+++ b/todolist-debut-ex2/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.show-sql = true
 
 # Créé les tables si elles n'existent pas mais ne supprime pas les données existantes
 spring.jpa.hibernate.ddl-auto = update
+server.port=9090
